kubernetes/pgadmin/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: nodejs
  rules:
    - host: pgadmin.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
            path: /
